syntax = "proto3";
package RPC;

message WriteArgs {
  string key = 1;
  string value = 2;
}

message WriteReply {
  bool isLeader = 1; // 重定向Leader
  bool success = 2;
}

message ReadArgs {
  string key = 1;
}

message ReadReply {
  bool isLeader  = 1;
  string value = 2;
}

service Serve {
  rpc WriteRequest(WriteArgs) returns (WriteReply);
  rpc ReadRequest(ReadArgs) returns (ReadReply);
}